Cambio en el texto

--- a/src/dotnetstarter/wwwroot/index.html
+++ b/src/dotnetstarter/wwwroot/index.html
@@ -14,7 +14,7 @@
                 </td>
                 <td>
                     <h1 id="message">Hola Mundo IBM!</h1>
-                    <p class='description'></p> Gracias por crear una aplicacion Bluemix con <span class="blue">ASP.NET Core Starter Application</span>.
+                    <p class='description'></p> Gracias por crear una nueva aplicacion Bluemix con <span class="blue">ASP.NET Core Starter Application</span>.
                 </td>
             </tr>
         </table>
